# ai-email-generator

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  emails_20260507_065603.csv  main.py  pyproject.toml  railway.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: deps.py  router.py
app/api/v1/endpoints/: auth.py  emails.py
app/core/: exceptions.py  logging.py  middleware.py  rate_limit.py  security.py  settings.py
app/db/: session.py
app/migrations/: env.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: ai_provider.py  ai_service.py  auth_service.py  email_service.py
app/tests/integration/: test_emails.py
tests/: conftest.py  test_emails.py
tests/integration/: test_emails.py
